# turnbeutel

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  LICENSE  Makefile  README.md  agents.md  docker-compose.prod.yml  docker-compose.yml  usc-api-reference.md  usc-scraper-instructions.md
.claude/skills/verify/: SKILL.md
.devcontainer/: Dockerfile  devcontainer.json  init-firewall.sh
.github/workflows/: ci.yml
backend/: models.py  pyproject.toml  server.py  storage.py  test_server.py  test_storage.py
docs/: backlog.md
docs/superpowers/plans/: 2026-04-11-multi-city-viewport.md  2026-05-29-course-filters-redesign.md
docs/superpowers/specs/: 2026-05-29-course-filters-redesign-design.md  2026-07-11-client-cache-ttl-design.md  2026-07-11-mobile-bottom-sheet-design.md  2026-07-12-past-online-course-filters-design.md
frontend/: app.js  eslint.config.js  index.html  package-lock.json  package.json  style.css
scraper/: merge_data.py  scrape_details.py  scrape_listings.py
